Changes in main activity's layout

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,7 @@
     <color name="colorPrimaryDark">#2fab4d</color>
     <color name="colorAccent">#2fab4d</color>
     <!--<color name="colorAccent">#59546d</color>-->
-    <color name="black_alpha_40">#86000000</color>
+    <color name="black_alpha_toolbar">#86000000</color>
+    <color name="image_overlay_black">#AA000000</color>
+    <color name="text_shadow">#88000000</color>
 </resources>
