--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,8 +13,11 @@
         style="@style/Widget.AppCompat.ListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:entries="@array/menu_pain">
+        android:layout_marginTop="?attr/actionBarSize"
+        android:divider="@android:drawable/divider_horizontal_dark"
+        android:entries="@array/menu_pain"
+        android:theme="@style/WhiteList">
 
     </ListView>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
