--- a/app/src/main/res/layout/content_exercise_plan.xml
+++ b/app/src/main/res/layout/content_exercise_plan.xml
@@ -8,4 +8,14 @@
     tools:context=".ExercisePlanActivity"
     tools:showIn="@layout/activity_exercise_plan">
 
+    <ListView
+        android:id="@+id/listViewExercises"
+        style="@style/Widget.AppCompat.ListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@android:drawable/divider_horizontal_dim_dark"
+        android:entries="@array/menu_pain"
+        android:theme="@style/WhiteList"/>
+
+
 </android.support.constraint.ConstraintLayout>
