--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:scaleType = "centerCrop"
-        android:id="@+id/iv_background"
-        android:foreground="@color/image_overlay_black"
-        />
+        android:id="@+id/iv_background"/>
+        <!--android:foreground="@color/image_overlay_black"-->
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
