--- a/app/src/main/res/layout/content_exercise_plan.xml
+++ b/app/src/main/res/layout/content_exercise_plan.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,5 +17,12 @@
         android:entries="@array/menu_pain"
         android:theme="@style/WhiteList"/>
 
+    <carbon.widget.Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button_start"
+        android:layout_marginTop="450dp"
+        android:layout_centerHorizontal="true"
+        android:text="START"/>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
