--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,9 +13,9 @@
         style="@style/Widget.AppCompat.ListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@android:drawable/divider_horizontal_dim_dark"
-        android:entries="@array/menu_pain"
-        android:theme="@style/WhiteList"/>
+        android:dividerHeight="0dp"
+        android:divider="@null"
+        android:theme="@style/WhiteList" />
 
 
 </android.support.constraint.ConstraintLayout>
