--- a/app/src/main/res/layout/activity_exercise_plan.xml
+++ b/app/src/main/res/layout/activity_exercise_plan.xml
@@ -7,11 +7,11 @@
     tools:context=".ExercisePlanActivity">
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType = "centerCrop"
         android:id="@+id/iv_background"
-        android:foreground="@color/image_overlay_black"
         />
 
     <android.support.design.widget.AppBarLayout
