--- a/app/src/main/res/layout/content_exercise_plan.xml
+++ b/app/src/main/res/layout/content_exercise_plan.xml
@@ -13,8 +13,8 @@
         style="@style/Widget.AppCompat.ListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@android:drawable/divider_horizontal_dim_dark"
-        android:entries="@array/menu_pain"
+        android:dividerHeight="0dp"
+        android:divider="@null"
         android:theme="@style/WhiteList"/>
 
     <carbon.widget.Button
