--- a/app/src/main/res/layout/activity_exercise_plan.xml
+++ b/app/src/main/res/layout/activity_exercise_plan.xml
@@ -30,5 +30,14 @@
 
     <include layout="@layout/content_exercise_plan" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        app:srcCompat="@drawable/ic_arrow_right"
+        android:layout_margin="24dp"
+        android:scaleType="center"/>
+
 
 </android.support.design.widget.CoordinatorLayout>
