--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -32,6 +32,7 @@
         <item>@drawable/back</item>
         <item>@drawable/back</item>
         <item>@drawable/back</item>
+        <item>@drawable/back</item>
         <item>@drawable/front</item>
         <item>@drawable/front</item>
     </integer-array>
