--- a/app/src/main/res/anim/fade_in.xml
+++ b/app/src/main/res/anim/fade_in.xml
@@ -4,6 +4,7 @@
         android:fromAlpha="0.0"
         android:toAlpha="1.0"
         android:fillAfter="true"
-        android:duration="2000"
+        android:duration="500"
+        android:interpolator="@android:anim/linear_interpolator"
         />
 </set>
