--- a/app/src/main/res/values/ball_location_coordinates.xml
+++ b/app/src/main/res/values/ball_location_coordinates.xml
@@ -13,6 +13,7 @@
     <string-array name="shoulder_ball_location_coordinates">
         <item>.51 .59 .19 .24</item>
         <item>.50 .58 .24 .29</item>
+        <item>.59 .67 .24 .29</item>
         <item>.57 .65 .27 .32</item>
         <item>.57 .65 .22 .27</item>
         <item>.65 .73 .24 .29</item>
