--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="black_alpha_toolbar">#86000000</color>
     <color name="image_overlay_black">#40000000</color>
     <color name="text_shadow">#88000000</color>
+    <color name="disabled_button_background">#b3b3b3</color>
 </resources>
