--- a/app/src/main/res/values/exercise_images_after_30_seconds.xml
+++ b/app/src/main/res/values/exercise_images_after_30_seconds.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="neck_images_after_30_seconds">
-        <item>suboccipital_3 suboccipital_4</item>
+        <item>suboccipital_1 suboccipital_2</item>
         <item>neck_extensors_3 neck_extensors_4 neck_extensors_5</item>
-        <item>levator_scapulae_4, levator_scapulae_5, levator_scapulae_6</item>
+        <item>levator_scapulae_4 levator_scapulae_5 levator_scapulae_6</item>
     </string-array>
 
     <string-array name="shoulder_images_after_30_seconds">
         <item>levator_scapulae_4 levator_scapulae_5 levator_scapulae_6</item>
         <item>rhomboid_muscles_3 rhomboid_muscles_4</item>
-        <item>infraspinatus_and_teres_muscles_4 infraspinatus_and_teres_muscles_5 infraspinatus_and_teres_muscles_6</item>
+        <item>infraspinatus_and_teres_muscles_1 infraspinatus_and_teres_muscles_2 infraspinatus_and_teres_muscles_3</item>
         <item>latissimus_dorsi_muscle_3 latissimus_dorsi_muscle_4</item>
         <item>pectoral_muscles_4 pectoral_muscles_5 pectoral_muscles_6</item>
         <item>anterior_deltoid_4 anterior_deltoid_5 anterior_deltoid_6</item>
     </string-array>
 
     <string-array name="thoracic_spine_images_after_30_seconds">
-        <item>rhomboid_muscles_3 rhomboid_muscles_4</item>
+        <item>rhomboid_muscles_1 rhomboid_muscles_2</item>
         <item>erector_spinae_and_trapezius_ascending_4 erector_spinae_and_trapezius_ascending_5 erector_spinae_and_trapezius_ascending_6</item>
         <item>pectoral_muscles_4 pectoral_muscles_5 pectoral_muscles_6</item>
     </string-array>
